--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Git course</title>
 </head>
 <body>
-    <h1>Hello A</h1>
+    <h1>Hello Ali</h1>
     <h2>Second tag</h2>
+    <h3>я устал</h3>
+    <h4>яблоко</h4>
 </body>
 </html>
