--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git course</title>
+    <title>Git coursefdfd</title>
 </head>
 <body>
     <h1>Hello Ali</h1>
@@ -12,5 +12,7 @@
     <h3>я устал</h3>
     <h4>яблоко</h4>
     <h5>BB</h5>
+    <h6>kameliya</h6>
+    <h6>just do it</h6>
 </body>
 </html>
